welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: reassignment to val
	if(a = b){
             ^close10:5: error: type mismatch;
 found   : Unit
 required: Int
	else if (Math.abs(10 - a) >= Math.abs(10 - a))
             ^